// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormGroup matches snapshot with error prop set: with error prop 1`] = `
.c1 {
  margin-bottom: 20px;
  padding-left: 15px;
  border-left: 5px solid #d4351c;
}

.c0 .c0:last-of-type {
  margin-bottom: 0;
}

.c1.c1 .c1 {
  padding: 0;
  border: 0;
}

@media only screen and (min-width:641px) {
  .c1 {
    margin-bottom: 30px;
  }
}

<FormGroupDocumented
  error={true}
>
  <src__FormGroup
    error={true}
  >
    <div
      className="c0 c1"
    >
      FormGroup example
    </div>
  </src__FormGroup>
</FormGroupDocumented>
`;

exports[`FormGroup matches snapshot: FormGroup 1`] = `
.c1 {
  margin-bottom: 20px;
}

.c0 .c0:last-of-type {
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .c1 {
    margin-bottom: 30px;
  }
}

<FormGroupDocumented
  error={false}
>
  <src__FormGroup
    error={false}
  >
    <div
      className="c0 c1"
    >
      FormGroup example
    </div>
  </src__FormGroup>
</FormGroupDocumented>
`;
